complete mines and hints

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <title>MINESWEEPER</title>
 </head>
 <body>
-    <div id="coords"></div>
-    <div id="board"></div>
+    <table id="myTable">
+        <!-- <tbody ></tbody> -->
+    </table>
+    <img src="" alt="">
 </body>
 </html>
