'main js ready to play, css color and style update'

--- a/index.html
+++ b/index.html
@@ -4,14 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script
+    src="https://code.jquery.com/jquery-3.2.1.min.js"
+    integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+    crossorigin="anonymous"
+  ></script>
     <script defer src="js/main.js"></script>
     <link rel="stylesheet" href="style.css"/>
     <title>MINESWEEPER</title>
 </head>
 <body>
-    <table id="myTable">
-        <!-- <tbody ></tbody> -->
+    <h1>MineSweeper</h1>
+    <table class="myTable">
+
     </table>
-    <img src="" alt="">
+    <div id="reset"></div>
 </body>
 </html>
+
